--- a/css/form.css
+++ b/css/form.css
@@ -5,9 +5,10 @@
  * General styles
  */
 body, html {
+    padding-top: 70px;
     height: 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+    background-image: linear-gradient(#63e5f9, #cee1ff);
 }
 
 .card-container.card {
