--- a/css/carousel_style.css
+++ b/css/carousel_style.css
@@ -22,8 +22,8 @@
   .carousel-inner .carousel-item-next,
   .carousel-inner .carousel-item-prev {
     position: relative;
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    -webkit-transform: translate(0, 0);
+            transform: translate(0, 0);
   }
 
   .carousel-inner
@@ -48,8 +48,8 @@
   + .carousel-item
   + .carousel-item {
     position: relative;
-    -webkit-transform: translate3d(-100%, 0, 0);
-            transform: translate3d(-100%, 0, 0);
+    -webkit-transform: translate(-100%, 0);
+            transform: translate(-100%, 0);
     visibility: visible;
   }
 
@@ -72,22 +72,31 @@
   + .carousel-item
   + .carousel-item {
     position: relative;
-    -webkit-transform: translate3d(100%, 0, 0);
-            transform: translate3d(100%, 0, 0);
+    -webkit-transform: translate(100%, 0);
+            transform: translate(100%, 0);
     visibility: visible;
     display: block;
     visibility: visible;
   }
+  
+  
+  
+  
+  .carousel-control-prev.disable,
+  .carousel-control-next.disable{
+    display: none;
+  }
+  .carousel-control-prev,
+  .carousel-control-next{
+    width: 5%;
+  }
+  .carousel-control-prev:hover,
+  .carousel-control-next:hover{
+    background-color: rgba(204,204,204,0.5);
+  }
 }
 
-.carousel-control-prev.disable,
-.carousel-control-next.disable{
-  display: none;
-}
-.carousel-control-prev:hover,
-.carousel-control-next:hover{
-  background-color: rgba(204,204,204,0.5);
-}
+
 
 
 
